--- a/frontend/vera_frontend/src/app/app.html
+++ b/frontend/vera_frontend/src/app/app.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen pt-4">
   <div
     class="min-h-screen pt-16 bg-cover bg-center bg-no-repeat"
-    style="background-image: url('assets/images/home-background.png')"
+    style="background-image: url('assets/images/home-background.webp')"
   >
     <app-cookie-consent></app-cookie-consent>
 
